feat: add federated api support
