# gravitee-apim-rest-api/gravitee-apim-rest-api-management-v2/gravitee-apim-rest-api-management-v2-rest/src/main/resources/openapi/openapi-apis.yaml
@@ -1919,12 +1919,14 @@ components:
                 - $ref: "#/components/schemas/ApiV1"
                 - $ref: "#/components/schemas/ApiV2"
                 - $ref: "#/components/schemas/ApiV4"
+                - $ref: "#/components/schemas/ApiFederated"
             discriminator:
                 propertyName: definitionVersion
                 mapping:
                     V1: ApiV1
                     V2: ApiV2
                     V4: ApiV4
+                    FEDERATED: ApiFederated
 
         BaseApi:
             type: object
@@ -2059,6 +2061,7 @@ components:
                     V1: ApiV1
                     V2: ApiV2
                     V4: ApiV4
+                    FEDERATED: ApiFederated
             required:
                 - definitionVersion
         ApiV1:
@@ -2163,6 +2166,15 @@ components:
                               $ref: "#/components/schemas/FlowV4"
                       services:
                           $ref: "#/components/schemas/ApiServices"
+        ApiFederated:
+            type: object
+            title: "ApiFederated"
+            allOf:
+                - $ref: "#/components/schemas/GenericApi"
+                - properties:
+                      accessPoint:
+                          type: string
+                          description: The access point to consume this API.
         ApiLinks:
             type: object
             properties:
@@ -2366,11 +2378,13 @@ components:
             oneOf:
                 - $ref: "#/components/schemas/UpdateApiV2"
                 - $ref: "#/components/schemas/UpdateApiV4"
+                - $ref: "#/components/schemas/UpdateApiFederated"
             discriminator:
                 propertyName: definitionVersion
                 mapping:
                     V2: UpdateApiV2
                     V4: UpdateApiV4
+                    FEDERATED: UpdateApiFederated
         UpdateGenericApi:
             type: object
             properties:
@@ -2451,6 +2465,7 @@ components:
                 mapping:
                     V2: UpdateApiV2
                     V4: UpdateApiV4
+                    FEDERATED: UpdateApiFederated
         UpdateApiV2:
             type: object
             title: "UpdateApiV2"
@@ -2507,6 +2522,11 @@ components:
                       services:
                           $ref: "#/components/schemas/ApiServices"
                   required: [ listeners, endpointGroups, type ]
+        UpdateApiFederated:
+            type: object
+            title: "UpdateApiFederated"
+            allOf:
+                - $ref: "#/components/schemas/UpdateGenericApi"
 
         ApiDeployment:
             type: object
@@ -2715,6 +2735,7 @@ components:
                 - V1
                 - V2
                 - V4
+                - FEDERATED
         EndpointV4:
             type: object
             properties:
